// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`capture exists values should capture exists value 1`] = `
Array [
  123,
  "test",
  Object {},
  Array [],
]
`;

exports[`capture exists values should ignore null 1`] = `
Array [
  123,
]
`;

exports[`capture exists values should ignore undefined 1`] = `
Array [
  123,
]
`;

exports[`capture exists values should not ignore empty string 1`] = `
Array [
  123,
  "",
]
`;

exports[`capture exists values should not ignore false 1`] = `
Array [
  123,
  false,
]
`;
